Refactor thumbnails and update social links in HTML files
- Replaced PNG images with WEBP format for better performance in Thumbnails directory.
- Updated social media links in about.html, certifications.html, contact.html, index.html, and projects.html to open in new tabs.
- Modified profile picture in about.html to use the new WEBP format.
- Enhanced project descriptions and tags in projects.html for clarity and accuracy.
- Updated document links to point to the correct Google Drive files.

--- a/about.html
+++ b/about.html
@@ -35,17 +35,17 @@
                       <button class="socials-btn"><p>Socials <img class="dropdown-icon" src="Icons/download-Photoroom.png"></p>
                       </button>
                       <div class="socials-container">
-                              <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                              <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru" target="_blank">
                                     <div class="socials">
                                       <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
                                     </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                <a style="text-decoration: none;" href="https://github.com/Tobe01"  target="_blank">
                                     <div class="socials">
                                       <img src="Icons/Github-Photoroom.png"> <P>Github</P>
                                     </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                     <div class="socials">
                                       <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
                                     </div>
@@ -61,7 +61,7 @@
                 <img src="Icons/mobile-apps-website-screen-brightness-260nw-2283103921-Photoroom.png" alt="Dark Mode Icon" class="theme-icon dark-icon hidden"/>
             </button>
                   <!-- From Uiverse.io by vinodjangid07 --> 
-                  <a href="https://drive.google.com/file/d/1jRMrtnjj-S5qpHIHjlFn3jUxEd1lqjAc/view?usp=drivesdk" style="text-decoration: none;">
+                  <a href="https://drive.google.com/file/d/13SFn8m-UsMKPEHX_JSaRl5WWYTc1QKYe/view?usp=drivesdk" target="_blank" style="text-decoration: none;">
                       <button class="Documents-btn">
                       <span class="folderContainer">
                       <svg
@@ -243,25 +243,25 @@
                         </div>
                         <div class="js-socials-links socials-links">
                             <div class="socials-link-sub">
-                                <a href="http://linkedin.com/in/tobechiduru">
+                                <a href="http://linkedin.com/in/tobechiduru" target="_blank">
                                     <div>
                                         <span><img src="Thumbnails/linkedin.png"></span>
                                         <p>LinkedIn</p>
                                     </div>
                                 </a>
-                                <a href="https://github.com/Tobe01">
+                                <a href="https://github.com/Tobe01" target="_blank">
                                     <div>
                                         <span><img src="Thumbnails/git.png"></span>
                                         <p>Github</p>
                                     </div>
                                 </a>
-                                <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                     <div>
                                         <span><img src="Thumbnails/x.png"></span>
                                         <p>X</p>
                                     </div>
                                 </a>
-                                <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU">
+                                <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU" target="_blank">
                                     <div>
                                         <span><img src="Thumbnails/youtube.png"></span>
                                         <p>YouTube</p>
@@ -284,7 +284,7 @@
                 </a>
             </div>
             <div class="custom-list-sub">
-                <a href = "https://tobechiduru.hashnode.dev/"> 
+                <a href = "https://tobechiduru.hashnode.dev/" target="_blank"> 
                     <p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p>
                 </a>
             </div>
@@ -295,7 +295,7 @@
   <section id="banner" class="about-container">
 
     <div class="image-section">
-      <img src="Thumbnails/134374811.jpg" alt="Profile Picture" class="profile-pic" />
+      <img src="Thumbnails/134374811.webp" alt="Profile Picture" class="profile-pic" />
     </div>
     <div class="content-section">
       <h1>ABOUT ME</h1>
@@ -309,7 +309,7 @@
 
   <section style="margin-bottom: 100px;" class="about-content">
     <h2>My Journey</h2>
-    <p>Hello! I’m Tobechi Duru, a Lagos-based Software Engineer driven by a passion for turning complex problems into elegant, scalable web solutions. With a strong focus on the MERN stack (MongoDB, Express.js, React.js, Node.js), I specialize in building modern applications that balance performance with user-centered design.</p>
+    <p>Hello! I’m Tobechi Duru, a Lagos-based Software Engineer driven by a passion for turning complex problems into elegant, scalable web solutions. With a strong focus on Frontend Engineering using React, Next.js, TypeScript and modern JavaScript (ES6+), I specialize in building modern applications that balance performance with user-centered design.</p>
 
     <p>My formal transition into tech was shaped by a 1-year intensive Diploma in Software Engineering from ALX-Holberton School, where I immersed myself in project-based learning that emphasized not just coding, but thinking like an engineer. Through this experience, I honed practical skills in full-stack development, algorithms, data structures, and system design — equipping me to thrive in fast-paced, real-world environments.</p>
 
