--- a/certifications.html
+++ b/certifications.html
@@ -62,7 +62,7 @@
                     <img src="Icons/mobile-apps-website-screen-brightness-260nw-2283103921-Photoroom.png" alt="Dark Mode Icon" class="theme-icon dark-icon hidden"/>
                 </button>
                     <!-- From Uiverse.io by vinodjangid07 --> 
-                    <a href="https://drive.google.com/file/d/1jRMrtnjj-S5qpHIHjlFn3jUxEd1lqjAc/view?usp=drivesdk" style="text-decoration: none;">
+                    <a href="https://drive.google.com/file/d/13SFn8m-UsMKPEHX_JSaRl5WWYTc1QKYe/view?usp=drivesdk" target="_blank" style="text-decoration: none;">
                         <button class="Documents-btn">
                         <span class="folderContainer">
                         <svg
@@ -293,16 +293,15 @@
         </div>
       </nav> 
 
-      <section id="banner" class="certifications-banner">
+     <section style="margin-top: 180px; margin-bottom: 10px;" class="projects-banner">
         <div class="banner-overlay">
           <h1>Certifications</h1>
-          <p style="max-width: 700px;">These certifications represent more than just completed courses, they are a testament to my unwavering commitment to continuous improvement, technical excellence, and staying at the forefront of innovation in the software engineering space. Each credential marks a deliberate step in expanding my knowledge, sharpening my problem-solving skills, and aligning with global industry standards.</p>
         </div>
       </section>
 
       <section id="card"  class="cert-section">
         <div class="card-grid js-cardGrid">
-        
+          <!-- Found in scripts file -->
         </div>
       </section>
 
