--- a/projects.html
+++ b/projects.html
@@ -40,17 +40,17 @@
                         <button class="socials-btn"><p>Socials <img class="dropdown-icon" src="Icons/download-Photoroom.png"></p>
                         </button>
                         <div class="socials-container">
-                                <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                                <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru" target="_blank">
                                     <div class="socials">
                                       <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
                                     </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                <a style="text-decoration: none;" href="https://github.com/Tobe01" target="_blank">
                                     <div class="socials">
                                       <img src="Icons/Github-Photoroom.png"> <P>Github</P>
                                     </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                     <div class="socials">
                                       <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
                                     </div>
@@ -66,7 +66,7 @@
                     <img src="Icons/mobile-apps-website-screen-brightness-260nw-2283103921-Photoroom.png" alt="Dark Mode Icon" class="theme-icon dark-icon hidden"/>
                 </button>
                     <!-- From Uiverse.io by vinodjangid07 --> 
-                    <a href="https://drive.google.com/file/d/1jRMrtnjj-S5qpHIHjlFn3jUxEd1lqjAc/view?usp=drivesdk" style="text-decoration: none;">
+                    <a href="https://drive.google.com/file/d/13SFn8m-UsMKPEHX_JSaRl5WWYTc1QKYe/view?usp=drivesdk" target="_blank" style="text-decoration: none;">
                         <button class="Documents-btn">
                         <span class="folderContainer">
                         <svg
@@ -248,25 +248,25 @@
                             </div>
                             <div class="js-socials-links socials-links">
                                 <div class="socials-link-sub">
-                                    <a href="http://linkedin.com/in/tobechiduru">
+                                    <a href="http://linkedin.com/in/tobechiduru" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/linkedin.png"></span>
                                             <p>LinkedIn</p>
                                         </div>
                                     </a>
-                                    <a href="https://github.com/Tobe01">
+                                    <a href="https://github.com/Tobe01" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/git.png"></span>
                                             <p>Github</p>
                                         </div>
                                     </a>
-                                    <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                    <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/x.png"></span>
                                             <p>X</p>
                                         </div>
                                     </a>
-                                    <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU">
+                                    <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/youtube.png"></span>
                                             <p>YouTube</p>
@@ -289,7 +289,7 @@
                     </a>
                 </div>
                 <div class="custom-list-sub">
-                    <a href = "https://tobechiduru.hashnode.dev/"> 
+                    <a href = "https://tobechiduru.hashnode.dev/" target="_blank"> 
                         <p style="color: var(--drop); font-weight: 700;" class="custom-menu-link">Blogs</p>
                     </a>
                 </div>
@@ -297,70 +297,69 @@
         </div>
     </nav> 
     
-    <main style="margin-top: 2px;">
+    <main class="projetsMainCont">
         <div class="carousel-container1">
-            <section style="margin-top: 80px; margin-bottom: 10px;" class="projects-banner">
+            <section class="projects-banner">
                 <div class="banner-overlay">
                   <h1>Selected Projects</h1>
-                    <p>
-                      This portfolio of selected projects showcases a curated selection of projects that reflect my deep understanding of modern web development from intuitive frontends built with React to powerful, scalable backends powered by Node.js, Express, and MongoDB. With every line of code, I strive for clarity, efficiency, and excellence.
-                  
-                      I believe in constant growth, and I’m always exploring new technologies, design principles, and best practices to push my boundaries and deliver cutting-edge, world-class digital products. 
-                    </p>
                 </div>
               </section>
 
             <div class="carousel1 js-carousel">
                 <!-- Original 7 cards -->
                  <div class="card1 fade-in-up">
-                    <a href="https://tobe-expense-tracker.vercel.app/" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/expense.png)"></div>
+                    <a href="https://tobe-expense-tracker.vercel.app/" style="text-decoration: none;" target="_blank">
+                        <div class="card-image1" style="background-image: url(Thumbnails/expense.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
-                                <span class="tag1">REACT, TYPESCRIPT</span>
+                                <span class="tag1">REACT.js</span>
+                                <span class="tag1">TYPESCRIPT</span>
                                 <span class="tag1">TAILWINDCSS</span>
-                                <span class="tag1">NODE/EXPRESS</span>
+                                <span class="tag1">SHADCN</span>
                             </div>
-                            <h3 class="card-title1">A responsive web app for tracking expenses with charts and a clean dashboard UI</h3>
-                            <p class="card-date1">EXPENSES TRACKER</p>
+                            <h3 class="card-title1">Lightweight TypeScript/React web app for tracking and reviewing daily expenses</h3>
+                            <p class="card-date1">QUIKNAPP (EXPENSE MANAGEMENT WEB APP)</p>
                         </div>
                     </a>
                  </div>
 
                   <div class="card1 fade-in-up">
-                    <a href="https://jumia-clone-sl3f.vercel.app/" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/58EC0FDB-8F9F-486E-A555-FFAD982FA41D.PNG)"></div>
+                    <a href="https://zayra-by-tobe.vercel.app/" target="_blank" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/zay.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
-                                <span class="tag1">REACT UI</span>
-                                <span class="tag1">STRIPE PAYMENTS</span>
-                                <span class="tag1">NODE/EXPRESS</span>
+                                <span class="tag1">REACT.js</span>
+                                <span class="tag1">JAVASCRIPT</span>
+                                <span class="tag1">SHADCN</span>
+                                <span class="tag1">SWEET-ALERT</span>
                             </div>
-                            <h3 class="card-title1">A modern online store with product pages, cart, and checkout</h3>
-                            <p class="card-date1">SHOPEASE (E-COMMERCE STORE)</p>
+                            <h3 class="card-title1">React ecommerce app with product listings, filters, and a clean UI</h3>
+                            <p class="card-date1">ZAYRA (E-COMMERCE STORE)</p>
                         </div>
                     </a>
                  </div>
 
                   <div class="card1 fade-in-up">
-                    <a href="#" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/skillHive.png)"></div>
+                    <a href="https://community-website-frontend-five.vercel.app/signup" target="_blank" style="text-decoration: none;">
+                        <div class="card-image1" style="background-image: url(Thumbnails/devbyte.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
-                                <span class="tag1">REACT UI</span>
-                                <span class="tag1">NODE/EXPRESS</span>
+                                <span class="tag1">REACT.js</span>
+                                <span class="tag1">SWEET-ALERT</span>
+                                <span class="tag1">NODE.js</span>
+                                <span class="tag1">EXPRESS</span>
                                 <span class="tag1">MONGODB</span>
                             </div>
-                            <h3 class="card-title1">List and browse beginner-friendly online courses</h3>
-                            <p class="card-date1">SKILLHIVE (COURSE LISTING APP)</p>
+                            <h3 class="card-title1">Community platform with profiles, admin tools, events, and user account management.</h3>
+                            <p class="card-date1">DEVBYTE (COMMUNITY PLATFORM)</p>
                         </div>
                     </a>
                  </div>
 
                 <!-- Duplicate set for seamless loop -->
-                  <div class="card1 fade-in-up">
+                  <div class="card1 fade-in-up" onclick="alert('This project is being updated, please check back later!')">
                     <a href="#" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/eventitfy.png)"></div>
+                        <div class="card-image1" style="background-image: url(Thumbnails/eventitfy.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
                                 <span class="tag1">NODE/EXPRESS</span>
@@ -373,9 +372,9 @@
                     </a>
                  </div>
 
-                  <div class="card1 fade-in-up">
+                  <div class="card1 fade-in-up" onclick="alert('This project is being updated, please check back later!')">
                     <a href="#" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/Notebox.png)"></div>
+                        <div class="card-image1" style="background-image: url(Thumbnails/Notebox.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
                                 <span class="tag1">JWT-AUTH</span>
@@ -387,9 +386,9 @@
                     </a>
                  </div>
 
-                  <div class="card1 fade-in-up">
+                  <div class="card1 fade-in-up" onclick="alert('This project is being updated, please check back later!')">
                     <a href="#" style="text-decoration: none;">
-                        <div class="card-image1" style="background-image: url(Thumbnails/Devlink.png)"></div>
+                        <div class="card-image1" style="background-image: url(Thumbnails/Devlink.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
                                 <span class="tag1">REACT FORMS</span>
