--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                       <img src="Icons/mobile-apps-website-screen-brightness-260nw-2283103921-Photoroom.png" alt="Dark Mode Icon" class="theme-icon dark-icon hidden"/>
                   </button>
                   <!-- From Uiverse.io by vinodjangid07 --> 
-                  <a href="https://drive.google.com/file/d/1jRMrtnjj-S5qpHIHjlFn3jUxEd1lqjAc/view?usp=drivesdk" style="text-decoration: none;">
+                  <a href="https://drive.google.com/file/d/13SFn8m-UsMKPEHX_JSaRl5WWYTc1QKYe/view?usp=drivesdk" target="_blank" style="text-decoration: none;">
                       <button class="Documents-btn">
                       <span class="folderContainer">
                       <svg
