--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                         <button class="socials-btn"><p>Socials <img class="dropdown-icon" src="Icons/download-Photoroom.png"></p>
                         </button>
                         <div class="socials-container">
-                                <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru">
+                                <a style="text-decoration: none;" href="http://linkedin.com/in/tobechiduru" target="_blank">
                                     <div class="socials">
                                     <img src="Icons/Linkedin-Photoroom.png"> <P>Linkedin</P>
                                     </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://github.com/Tobe01">
+                                <a style="text-decoration: none;" href="https://github.com/Tobe01" target="_blank">
                                     <div class="socials">
                                     <img src="Icons/Github-Photoroom.png"> <P>Github</P>
                                         </div>
                                 </a>
-                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                <a style="text-decoration: none;" href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                     <div class="socials">
                                     <img src="Icons/twitter-Photoroom.png"> <P>Twitter</P>
                                         </div>
@@ -69,7 +69,7 @@
                         <img src="Icons/mobile-apps-website-screen-brightness-260nw-2283103921-Photoroom.png" alt="Dark Mode Icon" class="theme-icon dark-icon hidden"/>
                     </button>
                     <!-- From Uiverse.io by vinodjangid07 --> 
-                    <a href="https://drive.google.com/file/d/1jRMrtnjj-S5qpHIHjlFn3jUxEd1lqjAc/view?usp=drivesdk" style="text-decoration: none;">
+                    <a href="https://drive.google.com/file/d/13SFn8m-UsMKPEHX_JSaRl5WWYTc1QKYe/view?usp=drivesdk" target="_blank" style="text-decoration: none;">
                         <button class="Documents-btn">
                         <span class="folderContainer">
                         <svg
@@ -251,25 +251,25 @@
                             </div>
                             <div class="js-socials-links socials-links">
                                 <div class="socials-link-sub">
-                                    <a href="http://linkedin.com/in/tobechiduru">
+                                    <a href="http://linkedin.com/in/tobechiduru" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/linkedin.png"></span>
                                             <p>LinkedIn</p>
                                         </div>
                                     </a>
-                                    <a href="https://github.com/Tobe01">
+                                    <a href="https://github.com/Tobe01" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/git.png"></span>
                                             <p>Github</p>
                                         </div>
                                     </a>
-                                    <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg">
+                                    <a href="https://x.com/_engrtee?s=21&t=5j8oahljiShAPOvhai2OQg" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/x.png"></span>
                                             <p>X</p>
                                         </div>
                                     </a>
-                                    <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU">
+                                    <a href="https://youtube.com/@_engrtee?si=xawQpJTWG1uE8scU" target="_blank">
                                         <div>
                                             <span><img src="Thumbnails/youtube.png"></span>
                                             <p>YouTube</p>
@@ -305,11 +305,13 @@
         <section id="introduction">
             <div class="introduction-container fade-in-up">
                 <div class="intro">
-                    <h1 >Software Engineer, MERN Stack Developer</h1>
-                    <h1><span>Building Tomorrow's Solutions Today!</span></h1>
+                    <h1 >Software Engineer • React (Next.js)</h1>
+                    <h1><span>Building High-Performance Software Systems!</span></h1>
                 </div>
                 <div class="sub-header">
-                    <p class="fade-in-up">I’m a passionate software engineer with 3+ years of experience in full-stack development. I craft scalable web apps with clean code and intuitive design, focused on solving real-world business problems and user needs...
+                    <p class="fade-in-up">I’m a passionate 
+                        Front-end Engineer with extensive experience building scalable, performant applications using React and modern JavaScript (ES6+). Skilled in component-driven development, frontend architecture, UI performance optimization,
+                        debugging, and test automation...
                     </p>
                 </div>
                 
