Update project URLs in topProjects.js and projects.html

--- a/projects.html
+++ b/projects.html
@@ -308,7 +308,7 @@
             <div class="carousel1 js-carousel">
                 <!-- Original 7 cards -->
                  <div class="card1 fade-in-up">
-                    <a href="https://tobe-expense-tracker.vercel.app/" style="text-decoration: none;" target="_blank">
+                    <a href="https://tobe-quiknapp.vercel.app/" style="text-decoration: none;" target="_blank">
                         <div class="card-image1" style="background-image: url(Thumbnails/expense.webp)"></div>
                         <div class="card-content1">
                             <div class="card-tags1">
