Add new skill icons and update profile information
- Added new SVG icons for Redis, Redux, Remix, Supabase, Tailwind CSS, TypeScript, and Vercel.
- Added a new image asset (tobe.webp).
- Updated AboutSection to comment out the Focus Areas section.
- Refactored ProjectsSection for improved readability and functionality, including pagination controls.
- Updated SkillsSection to display skills with icons and improved layout.
- Updated profile information, changing the name to Tobechi Duru and updating the role and contact details.
- Refactored skills data structure to include icons and labels for better organization.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/tobe.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -22,7 +22,7 @@
       name="twitter:description"
       content="Portfolio showcasing production-ready frontend projects, articles, and community work."
     />
-    <title>Senior Frontend Engineer Portfolio</title>
+    <title>Tobechi Duru | Top-rated Frontend Engineer</title>
   </head>
   <body>
     <div id="root"></div>
